set h2 title colour for footer to prevent ff accessibility issue for text contrast of title on bg

--- a/sass/cd/cd-footer/_cd-footer-menu.scss
+++ b/sass/cd/cd-footer/_cd-footer-menu.scss
@@ -31,6 +31,7 @@
 // Hide default block titles
 .menu--footer h2 {
   @extend .visually-hidden;
+  color: $cd-white;
 }
 
 // Apply menu  styles to Drupal Menu items
